--- a/reset-password-success.html
+++ b/reset-password-success.html
@@ -42,6 +42,7 @@
         p {
             margin: 0;
             padding: 0;
+            font-weight: lighter;
             font-family: "Robot-R",Avenir,"Microsoft YaHei",微软雅黑;
         }
 
@@ -92,7 +93,7 @@
         <div style="position: relative;width: 100%;height: 1px;margin: 0 auto"></div>
         <img src="img/logo.png" alt="" class="mooring" id="mooring">
         <img src="img/icon.png" alt="" class="icon" id="icon">
-        <p class="tip">邮箱激活成功<br>感谢使用MOORING</p>
+        <p class="tip">重置密码成功</p>
     </div>
     
 </body>
@@ -100,7 +101,6 @@
 <script type="text/javascript">
     try{
         if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
-            console.log('aaa');
             var mooring = document.getElementById('mooring');
             mooring.style.height = "5vh";
             mooring.style.marginLeft = "6vw";
